--- a/AICoverGen_colab.ipynb
+++ b/AICoverGen_colab.ipynb
@@ -16,9 +16,9 @@
         "id": "YYVAKuNBc-X4"
       },
       "source": [
+        "# AICoverGen WebUI - forked from @ardha27/AI-Song-Cover-RVC/\n",
         "\n",
-        "\n",
-        "# AICoverGen WebUI (Modded by [Hina](https://discordlookup.com/user/444684887363026974))\n",
+        "### (Modded by [Hina](https://discordlookup.com/user/444684887363026974))\n",
         "\n",
         "Simply click `Runtime` in the top navigation bar and `Run all`. Wait for the output of the final cell to show the public gradio url and click on it."
       ]
@@ -38,7 +38,6 @@
         "!pip install mxnet-cu110"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "k7wRXnOSAVCB"
       },
       "execution_count": null,
@@ -157,8 +156,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NEglTq6Ya9d0",
-        "cellView": "form"
+        "id": "NEglTq6Ya9d0"
       },
       "outputs": [],
       "source": [
@@ -170,7 +168,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[![](https://i.pinimg.com/474x/de/72/9e/de729ecfa41b69901c42c82fff752414.jpg)](https://discordlookup.com/user/444684887363026974)"
+        "[![](https://avatars.githubusercontent.com/u/7106661?v=4)](https://github.com/rahuldhangar)"
       ],
       "metadata": {
         "id": "npldkPdYfkrA"
